kubernetes-ingress/dashboard-ingress.yaml
# Followed this link: https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: Kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules: # rules for the ingress
  - host: dashboard.com # hostname of the ingress
    http:
      paths:
      - path: /
        pathType: Exact  
        backend: # backend for the ingress
          service: 
            name: kubernetes-dashboard # you can get this from kubectl get svc -n kubernetes-dashboard
            port: 
              number: 80 # port of the service whic you can get from kubectl get svc -n kubernetes-dashboard
